examples/invalid/test23.alice

The looking-glass proc (number x)
opened

closed


The looking-glass hatta ()
opened 
  arr had 10 number.
  proc(arr).
closed
